# SPDX-License-Identifier: MIT

[package]
name = "weekly_journals"
version = "0.2.0"
edition = "2021"
exclude = [".github/*", "vscode*"]
homepage = "https://github.com/iamsergio/j"
repository = "https://github.com/iamsergio/j"
license = "MIT"
description = "Writes a journal entry to a text file corresponding to the current week number."
keywords = ["cli", "journal"]
categories = ["command-line-utilities"]

[dependencies]
chrono = "0.4.38"

[[bin]]
name = "j"
path = "src/main.rs"
